--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@ body {
   font-family:'Delicious Handrawn', cursive;
   font-size: 1.5em;
   text-align: right;
-  background: #0961c0;
+  background: #17408B;
   color: #ffff;
 }
