Added a feature to compare card choice one with card choice 2 to see if they match, added delay for wrong choice, added flip animation for card

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family:'Delicious Handrawn', cursive;
   font-size: 1.5em;
-  text-align: right;
+  text-align: relative;
   background: #17408B;
   color: #ffff;
 }
